--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "json-server": "json-server --watch data/db.json --port 8000",
+    "dev:all": "concurrently \"npm run dev\" \"npm run json-server\"",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
@@ -17,6 +19,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "concurrently": "^9.1.2",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.8"
