--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^3.5.3",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
+    "vitest": "^3.2.3",
     "vue-tsc": "^2.2.8"
   }
 }
