--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitejs/plugin-vue": "^5.2.3",
