--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.1.6"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
