--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.1.6"
+    "vue-i18n": "^11.1.6",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
