--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "echarts": "^5.6.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3",
     "vue-i18n": "^11.1.6",
     "vue-router": "^4.5.1"
   },
